tokenizer update: keywords installed

--- a/compiler/tokenizer/Makefile
+++ b/compiler/tokenizer/Makefile
@@ -1,2 +1,2 @@
-tokenizer.out: tokenizer.c 
-	gcc tokenizer.c -Wall -Wextra -o tokenizer.out
+tokenizer.out: tokenizer.c util.c
+	gcc tokenizer.c util.c -Wall -Wextra -o tokenizer.out
